[package]
name = "ruget"
version = "0.4.0"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
edition = "2018"
repository = "https://github.com/ksk001100/ruget"
keywords = ["wget", "downloader", "parallel"]
license-file = "LICENSE"
readme = "README.md"
description = "Alternative to wget written in Rust"

[dependencies]
seahorse = "1.0.0"
async-std = "1.6.0"
surf = "1.0.3"
chrono = "0.4.11"
